5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1644_2447.log
== TEST (2019-04-11 16:26:17) 
-- CODE:
#Leitura dos valores de preco e pagamento
preco = float(input("Qual o preco? "))
pgto = float(input("Qual o valor do pagamento? "))

if (preco >= pgto):
	dif = preco - pgto
	print("Falta " + dif)

Else: 
	troco = pgto - preco
	print("Troco de " + troco)
-- ERROR:
File "XXXX", line 9
    Else: 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:26:27) 
-- CODE:
#Leitura dos valores de preco e pagamento
preco = float(input("Qual o preco? "))
pgto = float(input("Qual o valor do pagamento? "))

if (preco >= pgto):
	dif = preco - pgto
	print("Falta " + dif)

else: 
	troco = pgto - preco
	print("Troco de " + troco)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print("Falta " + dif)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:27:52) 
-- CODE:
#Leitura dos valores de preco e pagamento
preco = float(input("Qual o preco? "))
pgto = float(input("Qual o valor do pagamento? "))

if (preco >= pgto):
	dif = preco - pgto
	print("Falta " + dif)

else: 
	troco = pgto - preco
	float(print("Troco de " + troco))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print("Falta " + dif)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:28:16) 
-- CODE:
#Leitura dos valores de preco e pagamento
preco = float(input("Qual o preco? "))
pgto = float(input("Qual o valor do pagamento? "))

if (preco >= pgto):
	dif = preco - pgto
	float(print("Falta " + dif))

else: 
	troco = pgto - preco
	float(print("Troco de " + troco))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    float(print("Falta " + dif))
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:29:36) 
-- CODE:
#Leitura dos valores de preco e pagamento
preco = float(input("Qual o preco? "))
pgto = float(input("Qual o valor do pagamento? "))

if (preco >= pgto):
	dif = preco - pgto
	print(dif)

else: 
	troco = pgto - preco
	print(troco)
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:29:48) 
-- CODE:
#Leitura dos valores de preco e pagamento
preco = float(input("Qual o preco? "))
pgto = float(input("Qual o valor do pagamento? "))

if (preco >= pgto):
	dif = preco - pgto
	print(dif)

else: 
	troco = pgto - preco
	print(troco)
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 07:48:37) 
-- CODE:
#Leitura dos valores de preco e pagamento
preco = float(input("Qual o preco? "))
pgto = float(input("Qual o valor do pagamento? "))

if (preco >= pgto):
	dif = preco - pgto
	print(dif)

else: 
	troco = pgto - preco
	print(troco)
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 07:48:51) 
-- CODE:
#Leitura dos valores de preco e pagamento
preco = float(input("Qual o preco? "))
pgto = float(input("Qual o valor do pagamento? "))

if (preco >= pgto):
	dif = preco - pgto
	print(dif)

else: 
	troco = pgto - preco
	print(troco)
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 07:50:16) 
-- CODE:
#Leitura dos valores de preco e pagamento
preco = float(input("Qual o preco? "))
pgto = float(input("Qual o valor do pagamento? "))

if (preco >= pgto):
	dif = preco - pgto
	print(round(dif,2))

else: 
	troco = pgto - preco
	print(round(troco, 2))
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:50:41) 
-- CODE:
#Leitura dos valores de preco e pagamento
preco = float(input("Qual o preco? "))
pgto = float(input("Qual o valor do pagamento? "))

if (preco >= pgto):
	dif = preco - pgto
	print(round(dif,2))

else: 
	troco = pgto - preco
	print(round(troco, 2))
-- EXECUTION TIME:
0.146278
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 07:54:28) 
-- CODE:
#Leitura dos valores de preco e pagamento
preco = float(input("Qual o preco? "))
pgto = float(input("Qual o valor do pagamento? "))

if (preco >= pgto):
	dif = round(preco - pgto, 2)
	print(dif)
	
else: 
	troco = round(pgto - preco, 2)
	print(troco)
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 07:55:54) 
-- CODE:
#Leitura dos valores de preco e pagamento
preco = float(input("Qual o preco? "))
pgto = float(input("Qual o valor do pagamento? "))

if (preco >= pgto):
	dif = round(preco - pgto, 2)
	print("Falta " + dif)
	
else: 
	troco = round(pgto - preco, 2)
	print(troco)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print("Falta " + dif)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 07:56:43) 
-- CODE:
#Leitura dos valores de preco e pagamento
preco = float(input("Qual o preco? "))
pgto = float(input("Qual o valor do pagamento? "))

if (preco >= pgto):
	dif = round(preco - pgto, 2)
	print(2 + dif)
	
else: 
	troco = round(pgto - preco, 2)
	print(troco)
-- OUTPUT:
28.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:01:02) 
-- CODE:
#Leitura dos valores de preco e pagamento
preco = float(input("Qual o preco? "))
pgto = float(input("Qual o valor do pagamento? "))

if (preco >= pgto):
	dif = round(preco - pgto, 2)
	print(input("Falta " + dif)
	
else: 
	troco = round(pgto - preco, 2)
	print(troco)
-- ERROR:
File "XXXX", line 9
    else: 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:04:37) 
-- CODE:
#Leitura dos valores de preco e pagamento
preco = float(input("Qual o preco? "))
pgto = float(input("Qual o valor do pagamento? "))

if (preco >= pgto):
	dif = str(round(preco - pgto, 2))
	print("Falta " + dif)
	
else: 
	troco = round(pgto - preco, 2)
	print(troco)
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:05:35) 
-- CODE:
#Leitura dos valores de preco e pagamento
preco = float(input("Qual o preco? "))
pgto = float(input("Qual o valor do pagamento? "))

if (preco >= pgto):
	dif = str(round(preco - pgto, 2))
	print("Falta " + dif)
	
else: 
	troco = str(round(pgto - preco, 2))
	print("Troco de " + troco)
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 08:05:48) 
-- CODE:
#Leitura dos valores de preco e pagamento
preco = float(input("Qual o preco? "))
pgto = float(input("Qual o valor do pagamento? "))

if (preco >= pgto):
	dif = str(round(preco - pgto, 2))
	print("Falta " + dif)
	
else: 
	troco = str(round(pgto - preco, 2))
	print("Troco de " + troco)
-- EXECUTION TIME:
0.141097
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Falta 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:08:58) 
-- CODE:
#Leitura dos valores de preco e pagamento
X = float(input("preco: "))
Y = float(input("pagamento: "))

if (X >= Y):
	dif = str(round(X - Y, 2))
	print("Falta " + dif)
	
else: 
	troco = str(round(Y - X, 2))
	print("Troco de " + troco)
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:09:17) 
-- CODE:
#Leitura dos valores de preco e pagamento
X = float(input("preco: "))
Y = float(input("pagamento: "))

if (X >= Y):
	dif = str(round(X - Y, 2))
	print("Falta " + dif)
	
else: 
	troco = str(round(Y - X, 2))
	print("Troco de " + troco)
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 08:09:31) 
-- CODE:
#Leitura dos valores de preco e pagamento
X = float(input("preco: "))
Y = float(input("pagamento: "))

if (X >= Y):
	dif = str(round(X - Y, 2))
	print("Falta " + dif)
	
else: 
	troco = str(round(Y - X, 2))
	print("Troco de " + troco)
-- EXECUTION TIME:
0.18473
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Falta 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 08:35:32) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

dif = round(x - y, 2)
troco = round(y - x)
if (X >= Y):
	print("Falta " + dif)
	
else: 
	print("Troco de " + troco)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (X >= Y):
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 08:36:26) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

dif = str(round(x - y, 2))
troco = str(round(y - x))
if (X >= Y):
	print("Falta " + dif)
	
else: 
	print("Troco de " + troco)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (X >= Y):
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 08:36:53) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

dif = str(round(x - y, 2))
troco = str(round(y - x))
if (x >= y):
	print("Falta " + dif)
	
else: 
	print("Troco de " + troco)
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 08:37:07) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

dif = str(round(x - y, 2))
troco = str(round(y - x))
if (x >= y):
	print("Falta " + dif)
	
else: 
	print("Troco de " + troco)
-- EXECUTION TIME:
0.12619
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Falta 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 08:40:29) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
dif = str(round(x - y, 2))
troco = str(round(y - x, 2))

if (x >= y):
	print("Falta " + dif)
	
else: 
	print("Troco de " + troco)
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 08:40:41) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
dif = str(round(x - y, 2))
troco = str(round(y - x, 2))

if (x >= y):
	print("Falta " + dif)
	
else: 
	print("Troco de " + troco)
-- EXECUTION TIME:
0.237494
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Falta 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:11:06) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
falta = round(x - y, 2)
troco = round(y -x, 2)

if (falta >= 0):
	print(falta)
else:
	print(troco)
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:11:19) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
falta = round(x - y, 2)
troco = round(y -x, 2)

if (falta >= 0):
	print(falta)
else:
	print(troco)
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:16:53) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
falta = round(x - y, 2)
troco = round(y -x, 2)

if (falta >= 0):
	print("Falta "+ str(falta))
else:
	print("Troco de " + str(troco))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:17:07) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
falta = round(x - y, 2)
troco = round(y -x, 2)

if (falta >= 0):
	print("Falta "+ str(falta))
else:
	print("Troco de " + str(troco))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:17:23) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
falta = round(x - y, 2)
troco = round(y -x, 2)

if (falta >= 0):
	print("Falta "+ str(falta))
else:
	print("Troco de " + str(troco))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:17:36) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
falta = round(x - y, 2)
troco = round(y -x, 2)

if (falta >= 0):
	print("Falta "+ str(falta))
else:
	print("Troco de " + str(troco))
-- EXECUTION TIME:
0.197535
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Falta 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:18:16) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
falta = round(x - y, 2)
troco = round(y -x, 2)

if (falta >= 0):
	print("Falta "+ str(falta))
else:
	print("Troco de " + str(troco))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:21:06) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
falta = round(x - y, 2)
troco = round(y -x, 2)

if (x >= y):
	print("Falta "+ str(round(x-y, 2)))
else:
	print("Troco de " + str(round(troco(y-x)))
-- ERROR:
File "XXXX", line 13
    
                                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:21:27) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
falta = round(x - y, 2)
troco = round(y -x, 2)

if (x >= y):
	print("Falta "+ str(round(x-y, 2)))
else:
	print("Troco de " + str(round(troco(y-x, 2)))
-- ERROR:
File "XXXX", line 13
    
                                                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:21:51) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
falta = round(x - y, 2)
troco = round(y -x, 2)

if (x >= y):
	print("Falta "+ str(round(x-y, 2)))
else:
	print("Troco de " + str(round(y-x, 2)))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:22:05) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
falta = round(x - y, 2)
troco = round(y -x, 2)

if (x >= y):
	print("Falta "+ str(round(x-y, 2)))
else:
	print("Troco de " + str(round(y-x, 2)))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:22:25) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
falta = round(x - y, 2)
troco = round(y -x, 2)

if (x >= y):
	print("Falta "+ str(round(x-y, 2)))
else:
	print("Troco de " + str(round(y-x, 2)))
-- EXECUTION TIME:
0.142313
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Falta 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:23:08) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
if (x >= y):
	print("Falta "+ str(round(x-y, 2)))
else:
	print("Troco de " + str(round(y-x, 2)))
-- EXECUTION TIME:
0.107399
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Falta 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:23:13) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
if (x >= y):
	print("Falta "+ str(round(x-y, 2)))
else:
	print("Troco de " + str(round(y-x, 2)))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:23:24) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
if (x >= y):
	print("Falta "+ str(round(x-y, 2)))
else:
	print("Troco de " + str(round(y-x, 2)))
-- EXECUTION TIME:
0.165156
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Falta 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:24:01) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
if (x >= y):
	print("Falta "+ str(round(x-y, 2)))
else:
	print("Troco de " + str(round(y-x, 2)))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:24:50) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
if (x >= y):
	print("Falta "+ str(round(x-y, 2)))
if (y >= x):
	print("Troco de " + str(round(y-x, 2)))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:25:06) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
if (x >= y):
	print("Falta "+ str(round(x-y, 2)))
if (y >= x):
	print("Troco de " + str(round(y-x, 2)))
-- EXECUTION TIME:
0.282481
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Falta 0.0
Troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:25:53) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
if(x >= y):
	print("Falta "+ str(round(x-y, 2)))
if(y >= x):
	print("Troco de " + str(round(y-x, 2)))
-- EXECUTION TIME:
0.134001
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Falta 0.0
Troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:26:19) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
if(x >= y):
	print("Falta "+ str(round(x - y, 2)))
if(y >= x):
	print("Troco de " + str(round(y - x, 2)))
-- EXECUTION TIME:
0.163031
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Falta 0.0
Troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:26:45) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
if(x > y):
	print("Falta "+ str(round(x - y, 2)))
if(y > x):
	print("Troco de " + str(round(y - x, 2)))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:27:01) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
if(x > y):
	print("Falta "+ str(round(x - y, 2)))
if(y > x):
	print("Troco de " + str(round(y - x, 2)))
-- EXECUTION TIME:
0.127092
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:27:20) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
if(x > y):
	print("Falta "+ str(round(x - y, 2)))
if(y >= x):
	print("Troco de " + str(round(y - x, 2)))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:27:32) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
if(x > y):
	print("Falta "+ str(round(x - y, 2)))
if(y >= x):
	print("Troco de " + str(round(y - x, 2)))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:27:41) 
-- CODE:
#Leitura dos valores de preco e pagamento
x = float(input("preco: "))
y = float(input("pagamento: "))

#Calculo da diferenca ou troco
if(x > y):
	print("Falta "+ str(round(x - y, 2)))
if(y >= x):
	print("Troco de " + str(round(y - x, 2)))
-- EXECUTION TIME:
0.202635
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
